--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     ]
   },
   "dependencies": {
+    "@emotion/cache": "11.x",
+    "@emotion/react": "11.x",
+    "@emotion/server": "11.x",
+    "@emotion/styled": "11.x",
+    "@mui/material": "5.x",
     "@prisma/client": "3.14.0",
     "blitz": "0.45.4",
     "final-form": "4.20.7",
