--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@emotion/styled": "11.x",
     "@mui/material": "5.x",
     "@prisma/client": "3.14.0",
+    "autoprefixer": "10.x",
     "blitz": "0.45.4",
     "final-form": "4.20.7",
+    "postcss": "8.x",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.9",
+    "tailwindcss": "3.x",
     "zod": "3.17.3"
   },
   "devDependencies": {
